[package]
name = "rogue_box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7"
include_dir = "0.7.2"
log = "0.4.17"
serde_json = "1.0.85"
rand = "0.8.5"

imgui = "0.8.0"
imgui-gfx-renderer = "0.8.0"
gfx_device_gl = "0.16.2"
gfx_core = "0.9.2"